# HYX

Frame/: CMakeLists.txt
Frame/incl/: CalcParamFactory.h  FileAccesser.h  LosFileRecordManager.h  PMAITrainingEngine.h  PMCorrectionEngine.h  PathLossCalcEngine.h  PathLossofIndoorEngine.h  PropFrame.h  PropagationSubSys.h
Frame/src/: CalcParamFactory.cpp  FileAccesser.cpp  LosFileRecordManager.cpp  PMAITrainingEngine.cpp  PMCorrectionEngine.cpp  PathLossCalcEngine.cpp  PathLossofIndoorEngine.cpp  PropagationSubSys.cpp
Interface/: CMakeLists.txt
Interface/incl/: BuildingPolyPreLoadData.h  CellPLContainer.h  CellularType.h  ClutterParamsManager.h  GisPreLoadData.h  HorzRay.h  IClutterParamsManager.h  IPathLossAccesser.h  IPathLossCalcEngine.h  IPathLossCalculator.h  IPathLossExtractor.h  IPathLossMatrix.h  LiShuttleDtFileParser.h  LosFileRecord.h  RayInfo.h  (+19 more)
PMAIPlugins/: CMakeLists.txt
PMCorrectionPlugins/: CMakeLists.txt
PMCorrectionPlugins/incl/: CalibrateNlosCoefs.h  CalibrateRadiationCoefs.h  CalibrationParams.h  CellCorrectionData.h  CorrDiffraction.h  CorrFar_Los.h  CorrFar_nLos.h  CorrNear_Los.h  CorrectCalculator.h
Plugins/: CMakeLists.txt
Plugins/incl/: AtlasDiffractionLoss.h  BuildingPeak.h  BullingtonDiffractionLoss.h  CalcRegion.h  DeugoutDiffractionLoss.h  DiffractionLossBase.h  DiffractionLossFactory.h  DiffractionLossMethodHor.h  DiffractionLossMethodVer.h  EffRxHeight.h  EffTxHeightBase.h  EffTxHeightFactory.h  EffectTxAboveTheAverageGround.h  EffectTxAboveTheGround.h  EffectTxEnhancedSlope.h  EffectTxHeightHtAbsSpot.h  EffectTxSlopeAtReceiver.h  EffectTxSpotHt.h
PropIndoorPlugins/: CMakeLists.txt
(+17 files in other folders)
